--- a/index.html
+++ b/index.html
@@ -1,120 +1,256 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Scholarship Finder</title>
-  <style>
-    body {
-      font-family: Arial;
-      background: #f4f6f9;
-      padding: 20px;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>My Portfolio</title>
 
-    h1 {
-      text-align: center;
-      color: #333;
-    }
+<style>
+/* ========== RESET ========== */
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:'Segoe UI', sans-serif;
+}
 
-    .container {
-      max-width: 700px;
-      margin: auto;
-    }
+body{
+  background:#f2f4f8;
+  color:#333;
+}
 
-    input, select {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      font-size: 16px;
-    }
+/* ========== NAVBAR ========== */
+.navbar{
+  background:#0f172a;
+  padding:12px 18px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  position:relative;
+}
 
-    .card {
-      background: white;
-      padding: 15px;
-      margin-top: 10px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px #ccc;
-    }
+.logo{
+  color:#38bdf8;
+  font-size:22px;
+  font-weight:600;
+}
 
-    .btn {
-      margin-top: 10px;
-      background: #007bff;
-      color: white;
-      padding: 8px 12px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
+.menu-icon{
+  font-size:26px;
+  color:white;
+  cursor:pointer;
+}
 
-    .btn:hover {
-      background: #0056b3;
-    }
-  </style>
+#menu-toggle{
+  display:none;
+}
+
+.menu{
+  list-style:none;
+  display:none;
+  flex-direction:column;
+  background-color: #0f172a;
+  width:100%;
+  position:absolute;
+  top: 60px;
+  right:0;
+  left: auto;
+  text-align:right;
+
+ 
+}
+
+#menu-toggle:checked ~ .menu{
+  display:flex;
+}
+
+.menu li{
+  padding:15px;
+  border-bottom:1px solid #334155;
+}
+
+.menu li a{
+  color:#e2e8f0;
+  text-decoration:none;
+  font-size:16px;
+}
+
+/* ========== HERO ========== */
+.hero{
+  padding:50px 20px;
+  text-align:center;
+  background:linear-gradient(135deg,#0f172a,#1e3a8a);
+  color:white;
+}
+
+.hero h1{
+  font-size:30px;
+  margin-bottom:10px;
+}
+
+.hero p{
+  font-size:16px;
+  opacity:0.9;
+}
+
+/* ========== SECTION ========== */
+.section{
+  padding:40px 20px;
+}
+
+.section h2{
+  text-align:center;
+  margin-bottom:25px;
+  color:#0f172a;
+}
+
+/* ========== GRID (NO OVERLAP) ========== */
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(160px,1fr));
+  gap:20px;
+}
+
+/* ========== CARD ========== */
+.card{
+  background:rgb(231, 225, 225);
+  padding:20px;
+  border-radius:12px;
+  text-align:center;
+  box-shadow:0 10px 25px rgba(0,0,0,0.08);
+  transition:transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* hover without overlap */
+.card:hover{
+  transform:scale(1.08);
+  box-shadow:0 15px 35px rgba(0,0,0,0.15);
+}
+
+/* ========== SKILLS COLORS ========== */
+.tech{
+  border-top:4px solid #38bdf8;
+}
+
+.soft{
+  border-top:4px solid #34d399;
+}
+
+.qual{
+  border-top:4px solid #fbbf24;
+}
+
+/* ========== FOOTER ========== */
+.footer{
+  background:#0f172a;
+  color:#cbd5f5;
+  text-align:center;
+  padding:15px;
+  font-size:14px;
+}
+#p {
+  text-align: center;
+  text-decoration: underline;
+  font-size: 30px;
+  margin-inline: initial;
+  margin-top: 20px;
+  border-color: aliceblue;
+     color: blue;
+}
+#p1{
+  text-align: center;
+  font-size: 20px;
+  margin-inline: initial;
+  margin-top: 10px;
+  border-color: aliceblue;
+     color: rgb(19, 97, 128);
+
+}
+#p2{
+  text-align: center;
+  font-size: 18px;
+  margin-inline: initial;
+  margin-top: 10px;
+  border-color: aliceblue;
+     color: rgb(28, 93, 118);
+}
+</style>
 </head>
+
 <body>
 
-  <div class="container">
-    <h1>🎓 Scholarship Finder</h1>
+<!-- ===== NAVBAR ===== -->
+<nav class="navbar">
+  <div class="logo">My Portfolio</div>
 
-    <input type="text" id="search" placeholder="Search scholarship name..." onkeyup="filterScholarships()">
+  <input type="checkbox" id="menu-toggle">
+  <label for="menu-toggle" class="menu-icon">&#9776;</label>
 
-    <select id="category" onchange="filterScholarships()">
-      <option value="all">All Categories</option>
-      <option value="government">Government</option>
-      <option value="private">Private</option>
-      <option value="girls">Girls</option>
-      <option value="merit">Merit Based</option>
-    </select>
+  <ul class="menu">
+    <li><a href="#skills">Skills</a></li>
+    <li><a href="#softskills">Soft Skills</a></li>
+    <li><a href="#contact">Contact Me</a></li>
+  </ul>
+</nav>
 
-    <div id="results"></div>
+<!-- ===== HERO ===== -->
+<section class="hero">
+  <h1>Hello, I’m Bhanu Varshini</h1>
+  <p>Computer Engineering Student | Web Development Enthusiast</p>
+  <p>Develop To Create Innovative Solutions </p>
+  <p> MAKE IT TOGETHER</p>
+</section>
+<h1 id="p">ABOUT ME</h1>
+<p id="p1">I am a passionate Computer Engineering student with a strong interest in web development and problem-solving. I enjoy creating innovative solutions and working collaboratively to bring ideas to life.</p>
+<p id="p2"> I am a final-year Diploma student in Computer Engineering who loves exploring technology and building web applications. I have experience working with Python, JavaScript, HTML, CSS, and SQL. I believe in continuous learning, teamwork, and adapting to new challenges, and I am eager to start my career in the IT industry</p>
+<!-- ===== TECHNICAL SKILLS ===== -->
+<section class="section" id="skills">
+  <h2>Technical Skills</h2>
+
+  <div class="grid">
+    <div class="card tech">Python</div>
+    <div class="card tech">JavaScript</div>
+    <div class="card tech">HTML & CSS</div>
+    <div class="card tech">Web Development</div>
+    <div class="card tech">SQL</div>
   </div>
+</section>
 
-  <script>
-    const scholarships = [
-      { name: "INSPIRE Scholarship", amount: "₹80,000 per year", category: "government" },
-      { name: "Pragati Scholarship for Girls", amount: "₹50,000 per year", category: "girls" },
-      { name: "Google Generation Scholarship", amount: "₹1,00,000", category: "private" },
-      { name: "Post Matric Scholarship", amount: "₹60,000", category: "government" },
-      { name: "Merit-cum-Means Scholarship", amount: "₹25,000", category: "merit" }
-    ];
+<!-- ===== SOFT SKILLS ===== -->
+<section class="section" id="softskills">
+  <h2>Soft Skills</h2>
 
-    function display(data) {
-      const results = document.getElementById("results");
-      results.innerHTML = "";
+  <div class="grid">
+    <div class="card soft">Communication</div>
+    <div class="card soft">Adaptability</div>
+    <div class="card soft">Team Work</div>
+    <div class="card soft">Problem Solving</div>
+    <div class="card soft">Time Management</div>
+  </div>
+</section>
+<section class="section" id="contact">
+  <h2>Contact Me</h2>
+  <p style="text-align:center;">Email: bhanuvarshini@gmail.com</p>
+  <p style="text-align:center;">Phone: +91 9676431271</p>
+  </section>
 
-      data.forEach(item => {
-        results.innerHTML += `
-          <div class="card">
-            <h3>${item.name}</h3>
-            <p><strong>Amount:</strong> ${item.amount}</p>
-            <p><strong>Category:</strong> ${item.category}</p>
-            <button class="btn" onclick="applyMessage()">Apply Now</button>
-          </div>
-        `;
-      });
-    }
+<!-- ===== QUALIFICATION ===== -->
+<section class="section" id="qualification">
+  <h2>Qualification</h2>
 
-    function filterScholarships() {
-      const searchValue = document.getElementById("search").value.toLowerCase();
-      const categoryValue = document.getElementById("category").value;
+  <div class="grid">
+    <div class="card qual">
+      <h3>Diploma</h3>
+      <p>Final Year</p>
+      <p>Computer Engineering</p>
+    </div>
+  </div>
+</section>
 
-      const filtered = scholarships.filter(item => {
-        const matchesName = item.name.toLowerCase().includes(searchValue);
-        const matchesCategory = categoryValue === "all" || item.category === categoryValue;
-        return matchesName && matchesCategory;
-      });
+<!-- ===== FOOTER ===== -->
+<footer class="footer">
+  © 2026 | Portfolio Website
+</footer>
 
-      display(filtered);
-    }
-
-    function applyMessage() {
-      alert("Application feature coming soon!");
-    }
-
-    display(scholarships);
-  
-  </script>
-<a href="aboume.html">
-    <button id ="abc">Know About Developer</button>
-  
-</a>
 </body>
 </html>
